hphp/hack/test/typecheck/first_class_polymorphism/secret_resource.php.exp
ERROR: File "secret_resource.php", line 39, characters 3-39:
Cannot use unstable feature: `polymorphic_function_hints` (Parsing[1002])
ERROR: File "secret_resource.php", line 55, characters 5-60:
Cannot use unstable feature: `polymorphic_lambda` (Parsing[1002])
ERROR: File "secret_resource.php", line 55, characters 5-72:
Invalid argument (Typing[4110])
  File "secret_resource.php", line 55, characters 54-59:
  A higher rank generic will escape its scope
  File "secret_resource.php", line 53, characters 11-32:
  Please make this type explicit
